[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/xp-orb.png" type="Texture" id=1]
[ext_resource path="res://src/module/AutoAim.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/module/ChaseTarget.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/game/collectable/XPOrb.gd" type="Script" id=4]
[ext_resource path="res://assets/xp-orb-shadow.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[sub_resource type="CircleShape2D" id=2]
radius = 32.0

[node name="XPOrb" type="Area2D"]
script = ExtResource( 4 )

[node name="Sprite-Shadow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.498039 )
texture = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -5 )
shape = SubResource( 1 )

[node name="ChaseTarget" parent="." instance=ExtResource( 3 )]
holder_path = NodePath("..")

[node name="AutoAim" parent="." instance=ExtResource( 2 )]
target_group = "player"
single_look = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="AutoAim"]
shape = SubResource( 2 )

[connection signal="area_entered" from="." to="." method="_on_XPOrb_area_entered"]
[connection signal="change_target" from="AutoAim" to="." method="_on_AutoAim_change_target"]
